Fixes for 1. WMS-6532 alignment of calendar with type agenda 2. WMS-6965 Export button on datgrid

--- a/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
+++ b/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
@@ -83,6 +83,7 @@ body {
       text-align: right;
       vertical-align: top;
       .app-menu .app-button, .panel-action {
+        color: inherit;
         .app-anchor {
           color: inherit;
         }
