--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -1435,6 +1435,9 @@ If the height and width are not specified the video takes the height of the post
           color: inherit;
           background-color: transparent;
           border-width: 0;
+          padding-left: 0;
+          padding-right: 0;
+          text-align: center;
         }
         &.active, &:hover, &:focus{
           > a {
@@ -2360,7 +2363,10 @@ If the height and width are not specified the video takes the height of the post
     }
     th {
       text-align: center;
-      padding: 0.5em;
+      &:not(.fc-axis) {
+        padding: 1em 0;
+        text-align: center;
+      }
     }
 
     .fc-row {
